--- a/WallE_Visual/WorldViewer/WorldViewer.resx
+++ b/WallE_Visual/WorldViewer/WorldViewer.resx
@@ -125,6 +125,12 @@
   <data name="Plant_Medium_Green" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\resource\img\WallEObjects\Plant_Medium_Green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Robot_Green" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Robot_Green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Robot_Yellow" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Robot_Yellow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="toolTipPosition.TrayLocation" type="System.Drawing.Point, System.Drawing">
     <value>192, 17</value>
   </data>
